--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "casper",
+    "name": "Larva",
     "description": "A clean, minimal default theme for the Ghost publishing platform",
     "demo": "https://demo.ghost.io",
     "version": "5.7.0",
@@ -22,8 +22,8 @@
         "postship": "git fetch && gulp release"
     },
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
+        "name": "Dhanuka Shamen",
+        "email": "dhanukashamen@gmail.com",
         "url": "https://ghost.org/"
     },
     "gpm": {
@@ -40,10 +40,10 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Casper.git"
+        "url": "https://github.com/dhanukaShamen/Larva.git"
     },
-    "bugs": "https://github.com/TryGhost/Casper/issues",
-    "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
+    "bugs": "https://github.com/dhanukaShamen/Larva/issues",
+    "contributors": "https://github.com/dhanukaShamen/Larva/graphs/contributors",
     "devDependencies": {
         "@tryghost/release-utils": "0.8.1",
         "autoprefixer": "10.4.7",
